; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp9block.c_decode_coeffs_b_8bpp.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp9block.c_decode_coeffs_b_8bpp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i32, [6 x [3 x i32]]*, [6 x [2 x i32]]*, [6 x [11 x i32]]*, i32, i32*, [2 x i32]*, i32*, i32*)* @decode_coeffs_b_8bpp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_coeffs_b_8bpp(%struct.TYPE_3__* %0, i32* %1, i32 %2, [6 x [3 x i32]]* %3, [6 x [2 x i32]]* %4, [6 x [11 x i32]]* %5, i32 %6, i32* %7, [2 x i32]* %8, i32* %9, i32* %10) #0 {
  %12 = alloca %struct.TYPE_3__*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca [6 x [3 x i32]]*, align 8
  %16 = alloca [6 x [2 x i32]]*, align 8
  %17 = alloca [6 x [11 x i32]]*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  %20 = alloca [2 x i32]*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %12, align 8
  store i32* %1, i32** %13, align 8
  store i32 %2, i32* %14, align 4
  store [6 x [3 x i32]]* %3, [6 x [3 x i32]]** %15, align 8
  store [6 x [2 x i32]]* %4, [6 x [2 x i32]]** %16, align 8
  store [6 x [11 x i32]]* %5, [6 x [11 x i32]]** %17, align 8
  store i32 %6, i32* %18, align 4
  store i32* %7, i32** %19, align 8
  store [2 x i32]* %8, [2 x i32]** %20, align 8
  store i32* %9, i32** %21, align 8
  store i32* %10, i32** %22, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32*, i32** %13, align 8
  %27 = load i32, i32* %14, align 4
  %28 = load [6 x [3 x i32]]*, [6 x [3 x i32]]** %15, align 8
  %29 = bitcast [6 x [3 x i32]]* %28 to i32***
  %30 = load [6 x [2 x i32]]*, [6 x [2 x i32]]** %16, align 8
  %31 = bitcast [6 x [2 x i32]]* %30 to i32***
  %32 = load [6 x [11 x i32]]*, [6 x [11 x i32]]** %17, align 8
  %33 = bitcast [6 x [11 x i32]]* %32 to i32***
  %34 = load i32, i32* %18, align 4
  %35 = load i32*, i32** %19, align 8
  %36 = load [2 x i32]*, [2 x i32]** %20, align 8
  %37 = bitcast [2 x i32]* %36 to i32**
  %38 = load i32*, i32** %21, align 8
  %39 = load i32*, i32** %22, align 8
  %40 = call i32 @decode_coeffs_b_generic(i32 %25, i32* %26, i32 %27, i32 0, i32 1, i32 8, i32*** %29, i32*** %31, i32*** %33, i32 %34, i32* %35, i32** %37, i32* %38, i32* %39)
  ret i32 %40
}

declare dso_local i32 @decode_coeffs_b_generic(i32, i32*, i32, i32, i32, i32, i32***, i32***, i32***, i32, i32*, i32**, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
